# deangolan.github.io

./: .ocamlformat  OUTLINE_1  README.md  dune  dune-project  elm.json  interpreter.js  proofwriter.opam
_build/: .db  .digest-db  .to-delete-in-source-tree  .to-promote  log
_build/default/: .ocamlformat  proofwriter.dune-package  proofwriter.install  proofwriter.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/interpreter/: ast.ml  ast.pp.ml  interp.cma  interp.cmxa  interp.cmxs  interp.mli  interp.pp.ml  interp.pp.mli  interp__.ml-gen  lexer.ml  lexer.mll  lexer.pp.ml  line.cma  line.cmxa  line.cmxs  line.pp.ml  line.pp.mli  main.ml  main.mli  main.pp.ml  main.pp.mli  parser.ml  parser.mli  parser.mly  parser.pp.ml  parser.pp.mli  parser__mock.ml.mock  parser__mock.ml.pp.mock  parser__mock.mli.inferred  rules.ml  rules.pp.ml  simplify.pp.ml  validate.pp.ml
_build/default/js/: dune  main.bc-for-jsoo  main.bc.js  main.ml  main.pp.ml  prooftree.ml  (+6 more)
elm-stuff/0.19.1/: Main.elmi  Main.elmo  Port.elmi  Port.elmo
interpreter/: ast.ml  lexer.mll  line.mli  linezipper.ml  main.ml  main.mli  parser.mly
js/: dune  main.ml  prooftree.ml  zipper.ml
lib/: ast.ml  ast.mli  eval.ml  interp.ml  interp.mli  lexer.mll  parser.mly  rules.ml  rules.mli
site/: Main.elm  Port.elm  dune  elm.js  index.html  index.js  interpreter.js  main.js  port.js  prooftree.js  style.css
src/: ast.ml  ast.mli  dune  eval.ml  interp.ml  interp.mli  lexer.mll  line.mli  main.ml  parser.mly  rules.ml  rules.mli
test/: dune
(+300 files in other folders)
